<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulOscuro"
    tools:context="com.example.bd2E1ds.NuevaGestionActivity">

    <TextView
        android:id="@+id/tituloNuevaGestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/anadir_gestion"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView con el texto de "Descripcion" -->
    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/descripcion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tituloNuevaGestion"
        app:layout_constraintTop_toTopOf="@+id/tituloNuevaGestion" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="100dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblDescripcion"
        app:layout_constraintTop_toBottomOf="@id/lblDescripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de añadir -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="110dp"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="@+id/lblDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/lblDescripcion" />

    <!-- Botón de volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back"
        android:text="@string/volver"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>