<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/principal"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.core.widget.NestedScrollView
		android:id="@+id/Nested"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/azulOscuro"
		tools:context="com.example.bd2E1ds.InfoCadaCaso">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/lblNombreCaso"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:fontFamily="@font/aclonica"
				android:gravity="center"
				android:textColor="@android:color/holo_orange_light"
				android:textSize="30sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/lblNumeroCaso"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="50dp"
				android:fontFamily="@font/aclonica"
				android:text="@string/caso_n"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lblNombreCaso" />

			<TextView
				android:id="@+id/numeroCaso"
				android:layout_width="190dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toEndOf="@+id/lblNumeroCaso"
				app:layout_constraintTop_toTopOf="@+id/lblNumeroCaso" />

			<TextView
				android:id="@+id/lblFechaApertura"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="25dp"
				android:fontFamily="@font/aclonica"
				android:text="@string/fecha_de_apertura"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lblNumeroCaso" />

			<TextView
				android:id="@+id/fechaApertura"
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="5dp"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toEndOf="@+id/lblFechaApertura"
				app:layout_constraintTop_toTopOf="@+id/lblFechaApertura" />

			<TextView
				android:id="@+id/lblCaracteristicas"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="25dp"
				android:fontFamily="@font/aclonica"
				android:text="@string/caracteristicas"
				android:textColor="@android:color/holo_red_light"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/lblFechaApertura" />

			<TextView
				android:id="@+id/caracteristicas"
				android:layout_width="370dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2dp"
				android:textColor="@android:color/white"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@+id/lblCaracteristicas"
				app:layout_constraintTop_toBottomOf="@+id/lblCaracteristicas" />

			<TextView
				android:id="@+id/lblTituloGestiones"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:fontFamily="@font/aclonica"
				android:gravity="center"
				android:text="@string/gestiones"
				android:textColor="@android:color/holo_orange_light"
				android:textSize="25sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@id/caracteristicas"
				app:layout_constraintTop_toBottomOf="@id/caracteristicas" />

			<!-- Lista de gestiones -->
			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recyclerGestiones"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/lblTituloGestiones" />

			<!-- TextView para insertar margen al final de las gestiones -->
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="10dp"
				app:layout_constraintStart_toStartOf="@id/recyclerGestiones"
				app:layout_constraintTop_toBottomOf="@+id/recyclerGestiones" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/btn_nueva_gestion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="100dp"
		android:contentDescription="@string/btn_nueva_gestion"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/Nested"
		app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>