<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulOscuro"
    tools:context="com.example.bd2E1ds.NuevoCasoActivity">

    <TextView
        android:id="@+id/tituloNuevoCaso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/anadir_caso"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView con el texto de "Denominación" -->
    <TextView
        android:id="@+id/lblDenominacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/aclonica"
        android:text="Denominación"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tituloNuevoCaso"
        app:layout_constraintTop_toTopOf="@+id/tituloNuevoCaso" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/denominacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="67dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblDenominacion"
        app:layout_constraintTop_toBottomOf="@id/lblDenominacion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDenominacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextView con el texto de "Abogado" -->
    <TextView
        android:id="@+id/lblAbogado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/aclonica"
        android:text="Abogado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblDenominacion"
        app:layout_constraintTop_toTopOf="@+id/lblDenominacion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/abogado"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="67dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblAbogado"
        app:layout_constraintTop_toBottomOf="@id/lblAbogado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAbogado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- TextView con el texto de "Características" -->
    <TextView
        android:id="@+id/lblCaracteristicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/caracteristicas"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lblAbogado"
        app:layout_constraintTop_toTopOf="@+id/lblAbogado" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/caracteristicas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="67dp"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblCaracteristicas"
        app:layout_constraintTop_toBottomOf="@id/lblCaracteristicas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCaracteristicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica" />
    </com.google.android.material.textfield.TextInputLayout>




    <!-- Botón de añadir -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="80dp"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="@+id/lblCaracteristicas"
        app:layout_constraintTop_toBottomOf="@+id/lblCaracteristicas" />

    <!-- Botón de volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back"
        android:text="@string/volver"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caracteristicas" />

</androidx.constraintlayout.widget.ConstraintLayout>